Ingress_inventory-src_inventory.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"haproxy"},"creationTimestamp":"2021-07-29T15:59:28Z","generation":1,"labels":{"app.kubernetes.io/instance":"inventory-dest"},"managedFields":[{"apiVersion":"networking.k8s.io/v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{},"f:kubernetes.io/ingress.class":{}}},"f:spec":{"f:rules":{}}},"manager":"ku [...]
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2021-07-29T15:59:28Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: inventory-dest
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubernetes.io/ingress.class: {}
      f:spec:
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-07-29T15:59:28Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: haproxy-ingress-controller
    operation: Update
    time: "2021-07-29T15:59:30Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/instance: {}
    manager: argocd-application-controller
    operation: Update
    time: "2021-08-30T18:59:04Z"
  name: inventory
  namespace: inventory-marco
  resourceVersion: "49344510"
  selfLink: /apis/extensions/v1beta1/namespaces/inventory-src/ingresses/inventory
  uid: b69457e7-f1d7-4429-afff-27bb7666d1a1
spec:
  rules:
  - host: inventory.inventory-src.10.19.2.21.nip.io
    http:
      paths:
      - backend:
          serviceName: inventory
          servicePort: 8080
        path: /
        pathType: Prefix
