Service_inventory-src_inventory-postgresql-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"meta.helm.sh/release-name":"inventory","meta.helm.sh/release-namespace":"inventory-src"},"creationTimestamp":"2021-08-15T20:26:28Z","labels":{"app.kubernetes.io/instance":"inventory-dest","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"postgresql","helm.sh/chart":"postgresql-10.9.2","service.alpha.kubernetes.io/tolerate-unready-endpoints":"true"},"managedFields":[{"apiVersion":"v1","fieldsType":"FieldsV1","fiel [...]
    meta.helm.sh/release-name: inventory
    meta.helm.sh/release-namespace: inventory-src
  creationTimestamp: "2021-08-15T20:26:28Z"
  labels:
    app.kubernetes.io/instance: inventory-dest
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.9.2
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:helm.sh/chart: {}
          f:service.alpha.kubernetes.io/tolerate-unready-endpoints: {}
      f:spec:
        f:clusterIP: {}
        f:ports:
          .: {}
          k:{"port":5432,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:publishNotReadyAddresses: {}
        f:selector:
          .: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: helm
    operation: Update
    time: "2021-08-15T20:26:28Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          f:app.kubernetes.io/instance: {}
    manager: argocd-application-controller
    operation: Update
    time: "2021-08-30T18:59:03Z"
  name: inventory-postgresql-headless
  namespace: inventory-src
  resourceVersion: "49344483"
  selfLink: /api/v1/namespaces/inventory-src/services/inventory-postgresql-headless
  uid: 59980784-9f93-4088-b510-7c3a81a00d10
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
